fixed some layout issues, added more description

--- a/src/components/social/social.css
+++ b/src/components/social/social.css
@@ -1,5 +1,4 @@
 .social--link {
-    padding:20px;
     color: inherit;
     text-decoration: none;
 }
@@ -28,6 +27,8 @@
 .social--container {
     margin-top: 5px;
     text-align: center;
+    display: flex;
+    justify-content: space-between;
 }
 
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
